--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,14 @@ HeapDict==1.0.1
 msgpack==1.0.0
 munch==2.5.0
 netCDF4==1.5.4
-numpy==1.19.3
+numpy>=1.19.3
 pandas==1.1.4
 psutil==5.7.3
 pyhdf==0.10.2
 pyproj==2.6.1.post1
 python-dateutil==2.8.1
 pytz==2020.4
+pystare==0.5.5
 PyYAML==5.3.1
 Shapely==1.7.1
 six==1.15.0
