--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==7.1.2
 click-plugins==1.1.1
 cligj==0.7.0
 cloudpickle==1.6.0
-dask==2.30.0
+dask==2021.3.1
 distributed==2.30.0
 filelock==3.0.12
 Fiona==1.8.17
@@ -20,7 +20,7 @@ pyhdf==0.10.2
 pyproj==2.6.1.post1
 python-dateutil==2.8.1
 pytz==2020.4
-pystare==0.5.5
+pystare>0.5.5
 PyYAML==5.3.1
 Shapely==1.7.1
 six==1.15.0
