--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==7.1.2
 click-plugins==1.1.1
 cligj==0.7.0
 cloudpickle==1.6.0
-dask==2021.3.1
+dask>=2021.3.0
 distributed==2.30.0
 filelock==3.0.12
 Fiona==1.8.17
