--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
 attrs==20.2.0
 cftime==1.2.1
-click==7.1.2
+click>=8.0.1
 click-plugins==1.1.1
-cligj==0.7.0
+cligj>=0.7.2
 cloudpickle==1.6.0
 dask>=2021.3.0
 distributed>=2021.3.0
 filelock==3.0.12
 Fiona>=1.8.17
-geopandas==0.8.1
+geopandas>=0.9.0
 HeapDict==1.0.1
 msgpack==1.0.0
 munch==2.5.0
-netCDF4==1.5.4
+netCDF4>=1.5.4
 numpy>=1.19.3
-pandas==1.1.4
+pandas>=1.1.4
 psutil==5.7.3
-pyhdf==0.10.2
-pyproj==2.6.1.post1
+pyhdf>=0.10.3
+pyproj>=3.0.1
 python-dateutil==2.8.1
-pytz==2020.4
+pytz>=2020.4
 pystare>0.5.5
-PyYAML==5.3.1
+PyYAML>=5.4.1
 Shapely==1.7.1
-six==1.15.0
+six>=1.15.0
 sortedcontainers==2.2.2
 tblib==1.7.0
 toolz==0.11.1
 tornado==6.1
-xarray==0.16.1
+xarray>=0.16.1
 zict==2.0.0
