--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ include_package_data = True
 [options.entry_points]
 console_scripts =
     create_sidecar_files.py = staremaster.create_sidecar_files:main
+    find_missing_sidecars.py = staremaster.find_missing_sidecars:main
 
 [options.package_data]
 starepandas.datasets =  '*.hdf', '*.nc
