added pyproj to dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
     dask>=2022.7.1
     scipy>=1.9.0
     filelock>=3.7.1
+    pyproj>=3.4.0
 include_package_data = True
 
 [options.entry_points]
