--- a/.github/workflows/testrunner.yml
+++ b/.github/workflows/testrunner.yml
@@ -13,7 +13,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Github repo with LFS
+      uses: actions/checkout@v2
+      with:
+        lfs: true
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
